Hot fix to keep the navbar dock visible on mobile

--- a/src/theme/Navbar/styles.css
+++ b/src/theme/Navbar/styles.css
@@ -2,6 +2,12 @@
   display: flex;
 }
 
+@media (max-width: 996px) {
+  .navbar__item--dock {
+    display: flex;
+  }
+}
+
 .navbar__item--dock > * + * {
   margin-left: var(--ifm-navbar-padding-horizontal);
 }
